--- a/docker/prometheus/aerospike_rules.yml
+++ b/docker/prometheus/aerospike_rules.yml
@@ -81,3 +81,51 @@ groups:
     annotations:
       description: 'Used Memory space for namespace {{ $labels.ns }} in node {{ $labels.instance }} is above stop writes limit.'
       summary: Stop Writes for {{ $labels.instance }}/{{ $labels.ns }}
+  - alert: ClockSkewStopWrites
+    expr: aerospike_namespace_clock_skew_stop_writes{job="aerospike"} == 1
+    for: 30s
+    labels:
+      severity: "1"
+    annotations:
+      description: 'Clock has skewed for namespace {{ $labels.ns }} in node {{ $labels.instance }}'
+      summary: Writes will be stopped by Aerospike
+  - alert: ClusterSize
+    expr: aerospike_node_stats_cluster_size{job="aerospike"} < 2 # user has to replace his cluster size with 2 here in the example
+    for: 30s
+    labels:
+      severity: "1"
+    annotations:
+      description: 'Cluster size mismatch for namespace {{ $labels.ns }} in node {{ $labels.instance }}'
+      summary: Some of the node(s) has gone out of the cluster
+  - alert: DeadPartitions
+    expr: aerospike_namespace_dead_partitions{job="aerospike"} > 0
+    for: 30s
+    labels:
+      severity: "1"
+    annotations:
+      description: 'Some of the partition(s) for namespace {{ $labels.ns }} in node {{ $labels.instance }} are dead'
+      summary: Will require the use of the revive command to make them available again
+  - alert: HwmBreached
+    expr: aerospike_namespace_hwm_breached{job="aerospike"} == 1
+    for: 30s
+    labels:
+      severity: "1"
+    annotations:
+      description: 'High water mark has breached for namespace {{ $labels.ns }} in node {{ $labels.instance }}'
+      summary: Eviction will start to make the space available
+- alert: UnavailablePartitions
+    expr: aerospike_namespace_unavailable_partitions{job="aerospike"} > 0
+    for: 30s
+    labels:
+      severity: "1"
+    annotations:
+      description: 'Some of the partition(s) is not available for namespace {{ $labels.ns }} in node {{ $labels.instance }}'
+      summary: Server could not found some partition(s). Check for the network issues and make sure cluster forms properly
+- alert: XDRTimelag
+    expr: aerospike_node_stats_xdr_timelag{job="aerospike"} > 10 # user can configure the seconds. Refer XDR throttling
+    for: 30s
+    labels:
+      severity: "1"
+    annotations:
+      description: 'There seems some lag in XDR for namespace {{ $labels.ns }} in node {{ $labels.instance }}'
+      summary: Lag can be there in XDR due to network connectivity issues or errors writing at a destination cluster
