--- a/ape.toml.template
+++ b/ape.toml.template
@@ -21,6 +21,8 @@ log_level = "${AGENT_LOG_LEVEL}"
 basic_auth_username="${BASIC_AUTH_USERNAME}"
 basic_auth_password="${BASIC_AUTH_PASSWORD}"
 
+# Metrics Whitelist - If specified, only these metrics will be scraped. An empty list will exclude all metrics.
+
 # Namespace metrics whitelist
 # namespace_metrics_whitelist=[${NAMESPACE_METRICS_WHITELIST}]
 
