--- a/ape.toml.template
+++ b/ape.toml.template
@@ -1,8 +1,10 @@
 [Agent]
 update_interval = ${AGENT_UPDATE_INTERVAL}
+
 # File paths should be double quoted.
 # Certificate file for the metric servers for prometheus
 cert_file = "${AGENT_CERT_FILE}"
+
 # Key file for the metric servers for prometheus
 key_file = "${AGENT_KEY_FILE}"
 
@@ -27,17 +29,28 @@ db_port=${AS_PORT}
 
 # certificate file
 cert_file="${AS_CERT_FILE}"
+
 # key file
 key_file="${AS_KEY_FILE}"
+
+# Passphrase for encrypted key_file. Supports below formats,
+# 1. Passphrase directly                 - "<passphrase>"
+# 2. Passphrase via file                 - "file:<file-that-contains-passphrase>"
+# 3. Passphrase via environment variable - "env:<environment-variable-that-holds-passphrase>"
+key_file_passphrase="${AS_KEY_FILE_PASSPHRASE}"
+
 # node TLS name for authentication
 node_tls_name="${AS_NODE_TLS_NAME}"
+
 # root certificate file
 root_ca="${AS_ROOT_CA}"
 
 # authentication mode: internal (for server), external (LDAP, etc.)
 auth_mode="${AS_AUTH_MODE}"
+
 # database user
 user="${AS_AUTH_USER}"
+
 # database password
 password="$AS_AUTH_USER"
 
