--- a/ape.toml
+++ b/ape.toml
@@ -58,6 +58,9 @@ password=""
 # timeout for sending commands to the server node in seconds
 timeout=5
 
+# connection idle timeout in seconds. If configured, it must be set lower than `proto-fd-idle-ms` on Aerospike server.
+connection_idle_timeout=55
+
 # Metrics Allowlist - If specified, only these metrics will be scraped. An empty list will exclude all metrics.
 # Commenting out the below allowlist configs will disable metrics filtering (i.e. all metrics will be scraped).
 
