--- a/ape.toml
+++ b/ape.toml
@@ -21,12 +21,28 @@ log_file = ""
 log_level = ""
 
 # Basic HTTP authentication for '/metrics'.
+# Supports below formats,
+# 1. Credential directly                                                      - "<credential>"
+# 2. Credential via file                                                      - "file:<file-that-contains-credential>"
+# 3. Credential via environment variable                                      - "env:<environment-variable-that-contains-credential>"
+# 4. Credential via environment variable containing base64 encoded credential - "env-b64:<environment-variable-that-contains-base64-encoded-credential>"
+# 5. Credential in base64 encoded form                                        - "b64:<base64-encoded-credential>"
 basic_auth_username=""
 basic_auth_password=""
 
 [Aerospike]
 db_host="localhost"
 db_port=3000
+
+# TLS certificates.
+# Supports below formats,
+# 2. Certificate file path                                      - "file:<file-path>"
+# 3. Environment variable containing base64 encoded certificate - "env-b64:<environment-variable-that-contains-base64-encoded-certificate>"
+# 4. Base64 encoded certificate                                 - "b64:<base64-encoded-certificate>"
+# Applicable to 'root_ca', 'cert_file' and 'key_file' configurations.
+
+# root certificate file
+root_ca=""
 
 # certificate file
 cert_file=""
@@ -35,25 +51,33 @@ cert_file=""
 key_file=""
 
 # Passphrase for encrypted key_file. Supports below formats,
-# 1. Passphrase directly                 - "<passphrase>"
-# 2. Passphrase via file                 - "file:<file-that-contains-passphrase>"
-# 3. Passphrase via environment variable - "env:<environment-variable-that-holds-passphrase>"
+# 1. Passphrase directly                                                      - "<passphrase>"
+# 2. Passphrase via file                                                      - "file:<file-that-contains-passphrase>"
+# 3. Passphrase via environment variable                                      - "env:<environment-variable-that-holds-passphrase>"
+# 4. Passphrase via environment variable containing base64 encoded passphrase - "env-b64:<environment-variable-that-contains-base64-encoded-passphrase>"
+# 5. Passphrase in base64 encoded form                                        - "b64:<base64-encoded-passphrase>"
 key_file_passphrase=""
 
 # node TLS name for authentication
 node_tls_name=""
 
-# root certificate file
-root_ca=""
-
-# authentication mode: internal (for server), external (LDAP, etc.)
-auth_mode=""
+# Aerospike cluster security credentials.
+# Supports below formats,
+# 1. Credential directly                                                      - "<credential>"
+# 2. Credential via file                                                      - "file:<file-that-contains-credential>"
+# 3. Credential via environment variable                                      - "env:<environment-variable-that-contains-credential>"
+# 4. Credential via environment variable containing base64 encoded credential - "env-b64:<environment-variable-that-contains-base64-encoded-credential>"
+# 5. Credential in base64 encoded form                                        - "b64:<base64-encoded-credential>"
+# Applicable to 'user' and 'password' configurations.
 
 # database user
 user=""
 
 # database password
 password=""
+
+# authentication mode: internal (for server), external (LDAP, etc.)
+auth_mode=""
 
 # timeout for sending commands to the server node in seconds
 timeout=5
