--- a/ape.toml.template
+++ b/ape.toml.template
@@ -1,10 +1,18 @@
 [Agent]
-# File paths should be double quoted.
-# Certificate file for the metric servers for prometheus
+# Exporter HTTPS (TLS) configuration
+# HTTPS between Prometheus and Exporter
+
+# Server certificate
 cert_file = "${AGENT_CERT_FILE}"
 
-# Key file for the metric servers for prometheus
+# Private key associated with server certificate
 key_file = "${AGENT_KEY_FILE}"
+
+# Root CA to validate client certificates (for mutual TLS)
+root_ca = "${AGENT_ROOT_CA}"
+
+# Passphrase for encrypted key file
+key_file_passphrase = "${AGENT_KEY_FILE_PASSPHRASE}"
 
 # labels to add to the prometheus metrics for e.g. labels={zone="asia-south1-a", platform="google compute engine"}
 labels = {${METRIC_LABELS}}
@@ -36,9 +44,9 @@ db_port=${AS_PORT}
 
 # TLS certificates.
 # Supports below formats,
-# 2. Certificate file path                                      - "file:<file-path>"
-# 3. Environment variable containing base64 encoded certificate - "env-b64:<environment-variable-that-contains-base64-encoded-certificate>"
-# 4. Base64 encoded certificate                                 - "b64:<base64-encoded-certificate>"
+# 1. Certificate file path                                      - "file:<file-path>"
+# 2. Environment variable containing base64 encoded certificate - "env-b64:<environment-variable-that-contains-base64-encoded-certificate>"
+# 3. Base64 encoded certificate                                 - "b64:<base64-encoded-certificate>"
 # Applicable to 'root_ca', 'cert_file' and 'key_file' configurations.
 
 # root certificate file
