Add support for user statistics introduced in Aerospike 5.6

--- a/ape.toml
+++ b/ape.toml
@@ -130,3 +130,10 @@ timeout=5
 
 # XDR metrics blocklist (only for Aerospike versions 5.0 and above)
 # xdr_metrics_blocklist=[]
+
+# Users Statistics
+# Users Allowlist and Blocklist to control for which users their statistics should be collected.
+# Note globbing patterns are not supported for this configuration.
+
+# user_metrics_users_allowlist=[]
+# user_metrics_users_blocklist=[]
