--- a/ape.toml
+++ b/ape.toml
@@ -131,7 +131,7 @@ timeout=5
 # XDR metrics blocklist (only for Aerospike versions 5.0 and above)
 # xdr_metrics_blocklist=[]
 
-# Users Statistics
+# Users Statistics (user statistics are available in Aerospike 5.6+)
 # Users Allowlist and Blocklist to control for which users their statistics should be collected.
 # Note globbing patterns are not supported for this configuration.
 
