--- a/ape.toml
+++ b/ape.toml
@@ -102,6 +102,11 @@ auth_mode=""
 # timeout for sending commands to the server node in seconds
 timeout=5
 
+# Number of histogram buckets to export for latency metrics. Bucket thresholds range from 2^0 to 2^16 (17 buckets).
+# e.g. latency_buckets_count=5 will export first five buckets i.e. <=1ms, <=2ms, <=4ms, <=8ms and <=16ms.
+# Default: 0 (export all threshold buckets).
+latency_buckets_count=0
+
 # Metrics Allowlist - If specified, only these metrics will be scraped. An empty list will exclude all metrics.
 # Commenting out the below allowlist configs will disable metrics filtering (i.e. all metrics will be scraped).
 
