--- a/ape.toml.template
+++ b/ape.toml.template
@@ -102,6 +102,11 @@ auth_mode="${AS_AUTH_MODE}"
 # timeout for sending commands to the server node in seconds
 timeout=${TICKER_TIMEOUT}
 
+# Number of histogram buckets to export for latency metrics. Bucket thresholds range from 2^0 to 2^16 (17 buckets).
+# e.g. latency_buckets_count=5 will export first five buckets i.e. <=1ms, <=2ms, <=4ms, <=8ms and <=16ms.
+# Default: 0 (export all threshold buckets).
+latency_buckets_count=${LATENCY_BUCKETS_COUNT}
+
 # Metrics Allowlist - If specified, only these metrics will be scraped. An empty list will exclude all metrics.
 # Commenting out the below allowlist configs will disable metrics filtering (i.e. all metrics will be scraped).
 
