--- a/ape.toml
+++ b/ape.toml
@@ -27,7 +27,7 @@ root_ca = ""
 key_file_passphrase = ""
 
 # labels to add to the prometheus metrics for e.g. labels={zone="asia-south1-a", platform="google compute engine"}
-labels={}
+labels = {}
 
 bind = ":9145"
 
@@ -47,12 +47,12 @@ log_level = ""
 # 3. Credential via environment variable                                      - "env:<environment-variable-that-contains-credential>"
 # 4. Credential via environment variable containing base64 encoded credential - "env-b64:<environment-variable-that-contains-base64-encoded-credential>"
 # 5. Credential in base64 encoded form                                        - "b64:<base64-encoded-credential>"
-basic_auth_username=""
-basic_auth_password=""
+basic_auth_username = ""
+basic_auth_password = ""
 
 [Aerospike]
-db_host="localhost"
-db_port=3000
+db_host = "localhost"
+db_port = 3000
 
 # TLS certificates.
 # Supports below formats,
@@ -62,13 +62,13 @@ db_port=3000
 # Applicable to 'root_ca', 'cert_file' and 'key_file' configurations.
 
 # root certificate file
-root_ca=""
+root_ca = ""
 
 # certificate file
-cert_file=""
+cert_file = ""
 
 # key file
-key_file=""
+key_file = ""
 
 # Passphrase for encrypted key_file. Supports below formats,
 # 1. Passphrase directly                                                      - "<passphrase>"
@@ -76,10 +76,10 @@ key_file=""
 # 3. Passphrase via environment variable                                      - "env:<environment-variable-that-holds-passphrase>"
 # 4. Passphrase via environment variable containing base64 encoded passphrase - "env-b64:<environment-variable-that-contains-base64-encoded-passphrase>"
 # 5. Passphrase in base64 encoded form                                        - "b64:<base64-encoded-passphrase>"
-key_file_passphrase=""
+key_file_passphrase = ""
 
 # node TLS name for authentication
-node_tls_name=""
+node_tls_name = ""
 
 # Aerospike cluster security credentials.
 # Supports below formats,
@@ -91,54 +91,66 @@ node_tls_name=""
 # Applicable to 'user' and 'password' configurations.
 
 # database user
-user=""
+user = ""
 
 # database password
-password=""
+password = ""
 
 # authentication mode: internal (for server), external (LDAP, etc.)
-auth_mode=""
+auth_mode = ""
 
 # timeout for sending commands to the server node in seconds
-timeout=5
+timeout = 5
 
 # Number of histogram buckets to export for latency metrics. Bucket thresholds range from 2^0 to 2^16 (17 buckets).
 # e.g. latency_buckets_count=5 will export first five buckets i.e. <=1ms, <=2ms, <=4ms, <=8ms and <=16ms.
 # Default: 0 (export all threshold buckets).
-latency_buckets_count=0
+latency_buckets_count = 0
 
 # Metrics Allowlist - If specified, only these metrics will be scraped. An empty list will exclude all metrics.
 # Commenting out the below allowlist configs will disable metrics filtering (i.e. all metrics will be scraped).
 
 # Namespace metrics allowlist
-# namespace_metrics_allowlist=[]
+# namespace_metrics_allowlist = []
 
 # Set metrics allowlist
-# set_metrics_allowlist=[]
+# set_metrics_allowlist = []
 
 # Node metrics allowlist
-# node_metrics_allowlist=[]
+# node_metrics_allowlist = []
 
 # XDR metrics allowlist (only for Aerospike versions 5.0 and above)
-# xdr_metrics_allowlist=[]
+# xdr_metrics_allowlist = []
+
+# Job (scans/queries) metrics allowlist
+# job_metrics_allowlist = []
+
+# Secondary index metrics allowlist
+# sindex_metrics_allowlist = []
 
 # Metrics Blocklist - If specified, these metrics will be NOT be scraped.
 
 # Namespace metrics blocklist
-# namespace_metrics_blocklist=[]
+# namespace_metrics_blocklist = []
 
 # Set metrics blocklist
-# set_metrics_blocklist=[]
+# set_metrics_blocklist = []
 
 # Node metrics blocklist
-# node_metrics_blocklist=[]
+# node_metrics_blocklist = []
 
 # XDR metrics blocklist (only for Aerospike versions 5.0 and above)
-# xdr_metrics_blocklist=[]
+# xdr_metrics_blocklist = []
+
+# Job (scans/queries) metrics blocklist
+# job_metrics_blocklist = []
+
+# Secondary index metrics blocklist
+# sindex_metrics_blocklist = []
 
 # Users Statistics (user statistics are available in Aerospike 5.6+)
 # Users Allowlist and Blocklist to control for which users their statistics should be collected.
 # Note globbing patterns are not supported for this configuration.
 
-# user_metrics_users_allowlist=[]
-# user_metrics_users_blocklist=[]
+# user_metrics_users_allowlist = []
+# user_metrics_users_blocklist = []
