--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -1,3 +1,6 @@
+# Include common variables from TOP DIR
+include ../Makefile.vars
+
 # Variables required for this Makefile
 PKG_DIR = $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
 TOP_DIR = $(PKG_DIR)/..
@@ -19,6 +22,22 @@ DEB_PKG_ARCH ?= $(shell dpkg-architecture -q DEB_BUILD_ARCH)
 .PHONY: all
 all: deb rpm tar
 
+.PHONY: fipsparam
+fipsparam: 
+	@echo "fips enabled "$(IS_OS_FIPS_MODE)
+	@echo "os-name "$(OS_FULL_NAME)
+	@echo "APE_SUPPORTED_OS ==> "$(APE_SUPPORTED_OS)
+ifeq ($(APE_SUPPORTED_OS),validfipsos)
+	@echo  "Setting FIPS required params"
+	$(eval GO_FIPS=$(GO_BORINGCRYPTO))
+	$(eval BINARY_FILENAME=$(FIPS_BINARY_FILENAME))
+	@echo  "Current BINARY_FILENAME === "$(BINARY_FILENAME)
+else
+	@echo  "Fips Exporter build is supported only on CentOS 8 or Red Hat 8 versions"
+	exit 1
+endif
+
+
 .PHONY: deb
 deb: prep
 	fpm --force \
@@ -35,10 +54,10 @@ deb: prep
 		--url $(URL) \
 		--vendor $(VENDOR) \
 		--architecture $(DEB_PKG_ARCH) \
-		--package $(TARGET_DIR)/aerospike-prometheus-exporter-$(VERSION)-$(DEB_PKG_ARCH).deb
+		--package $(TARGET_DIR)/aerospike-prometheus-exporter_$(VERSION)_$(DEB_PKG_ARCH).deb
 
 .PHONY: rpm
-rpm: prep
+rpm: fipsparam prep
 	fpm --force \
 		--config-files /etc/aerospike-prometheus-exporter \
 		--input-type dir \
@@ -53,10 +72,10 @@ rpm: prep
 		--url $(URL) \
 		--vendor $(VENDOR) \
 		--architecture $(ARCH) \
-		--package $(TARGET_DIR)/aerospike-prometheus-exporter-$(VERSION)-$(ARCH).rpm
+		--package $(TARGET_DIR)/$(BINARY_FILENAME)-$(VERSION).$(ARCH).rpm
 
 .PHONY: tar
-tar: prep
+tar: fipsparam prep
 	fpm --force \
 		--config-files /etc/aerospike-prometheus-exporter \
 		--input-type dir \
@@ -70,10 +89,11 @@ tar: prep
 		--license $(LICENSE) \
 		--url $(URL) \
 		--vendor $(VENDOR) \
-		--package $(TARGET_DIR)/aerospike-prometheus-exporter-$(VERSION)-$(ARCH).tar
+		--package $(TARGET_DIR)/$(BINARY_FILENAME)_$(VERSION)_$(ARCH).tar
 
 .PHONY: prep
 prep:
+	@echo "prep BINARY_FILENAME "$(BINARY_FILENAME)
 	install -d $(TARGET_DIR)
 	install -d $(BUILD_DIR)/usr/bin
 	install -d $(BUILD_DIR)/etc/aerospike-prometheus-exporter
