OM-4 - Make Prometheus Exporter work in FIPs
renamed Package variable name
removed debug statements
beautified where possible
added support for fips build in Ubuntu

Rules:
1. if golang >=1.20 we support FIPS
2. if goland < 1.20 OS should be CentOS 8 or RHEL 8

--- a/Makefile.vars
+++ b/Makefile.vars
@@ -3,30 +3,40 @@ ROOT_DIR = $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
 VERSION = $(shell git describe --tags --always)
 GO_ENV_VARS =
 
-BINARY_FILENAME = aerospike-prometheus-exporter
-FIPS_BINARY_FILENAME = aerospike-prometheus-exporter-federal
+PKG_FILENAME = aerospike-prometheus-exporter
+FIPS_PKG_FILENAME = aerospike-prometheus-exporter-federal
+CENTOS_8 = $(shell cat /etc/*-release | grep "PRETTY_NAME" | sed 's/PRETTY_NAME=//g' | grep -i "CentOS" | grep -i "Linux 8")
+RHEL_8 = $(shell cat /etc/*-release | grep "PRETTY_NAME" | sed 's/PRETTY_NAME=//g' | grep -i "Red Hat" | grep -i "Linux 8")
 
 # FIPS required evaluations
 GO_VERSION = $(shell go version)
-ifeq ( , $(findstring go1.20,$(GO_VERSION) go_not_20 ))
-	GO_BORINGCRYPTO=
-else
-	GO_BORINGCRYPTO=boringcrypto
-endif
-GO_FIPS =  
+GO_FIPS =
 IS_OS_FIPS_MODE = $(shell cat /proc/sys/crypto/fips_enabled)
 
-OS_FULL_NAME = $(shell cat /etc/os-release | grep PRETTY_NAME )
+#OS_FULL_NAM = $(shell cat /etc/os-release | grep PRETTY_NAME )
 
-ifneq ( , $(findstring "CentOS Linux 8" ,$(OS_FULL_NAME) not_centos ))
-   ifneq ( , $(findstring "Red Hat Enterprise Linux 8" ,$(OS_FULL_NAME) not_redhat ))
-      APE_SUPPORTED_OS = 
-   else
-      APE_SUPPORTED_OS = validfipsos
-   endif
+APE_SUPPORTED_OS = invalid-os
+
+ifeq ( , $(findstring go1.20,$(GO_VERSION) go_not_20 ))
+        GO_BORINGCRYPTO=
+        # check if OS is CentOS 8 or RHEL 8
+        ifeq ($(CENTOS_8),)
+	         ifneq ($(RHEL_8),)
+			      APE_SUPPORTED_OS = validfipsos
+		      else
+			      APE_SUPPORTED_OS = not-validfipsos
+		      endif
+	      else
+		         APE_SUPPORTED_OS = validfipsos
+         endif
+        # end OS check
+
 else
-      APE_SUPPORTED_OS = validfipsos
+        # If Go version is >=1.20 we auto-support FIPS build
+        APE_SUPPORTED_OS = validfipsos
+        GO_BORINGCRYPTO=boringcrypto
 endif
+
 # end FIPS required evaluations
 
 # Variables related to go build
