OM-17 - handle review comments
fixed
README.md added rpm and deb package information
fixed Makefile, pkg/Makefile to print right log message when failing build/packaging

Makefile.vars - removed comment and un-used variable

--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -33,7 +33,7 @@ ifeq ($(APE_SUPPORTED_OS),validfipsos)
 	$(eval PKG_FILENAME=$(FIPS_PKG_FILENAME))
 	@echo  "Current PKG_FILENAME === "$(PKG_FILENAME)
 else
-	@echo  "Fips Exporter build is supported only on CentOS 8 or Red Hat 8 versions"
+	@echo  "Fips Exporter build is supported only on CentOS 8 or Red Hat 8 versions or have Golang v1.20 and above"
 	exit 1
 endif
 
