updated Dockerfile and Makefile.vars

--- a/Makefile.vars
+++ b/Makefile.vars
@@ -1,6 +1,6 @@
 # Variables required for this Makefile
 ROOT_DIR = $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
-VERSION = $(shell git describe --tags --always)
+VERSION = $(shell git describe --tags | cut -c 2-)
 GO_ENV_VARS =
 
 PKG_FILENAME = aerospike-prometheus-exporter
