OM36 - latencies allolist and blocklist
added 2 configurations in ape.toml ( latencies-allowList & latencies-blocklist)
enhanced watcher_latencies to send or block histograms for those histogram-names mentioned in allowlist or blocklist

--- a/ape.toml
+++ b/ape.toml
@@ -128,9 +128,6 @@ latency_buckets_count = 0
 # Secondary index metrics allowlist
 # sindex_metrics_allowlist = []
 
-# Latencies metrics allowlist
-# latencies_metrics_allowlist = []
-
 # Metrics Blocklist - If specified, these metrics will be NOT be scraped.
 
 # Namespace metrics blocklist
@@ -151,12 +148,16 @@ latency_buckets_count = 0
 # Secondary index metrics blocklist
 # sindex_metrics_blocklist = []
 
-# latencies metrics blocklist
-# latencies_metrics_blocklist = []
-
 # Users Statistics (user statistics are available in Aerospike 5.6+)
 # Users Allowlist and Blocklist to control for which users their statistics should be collected.
 # Note globbing patterns are not supported for this configuration.
 
 # user_metrics_users_allowlist = []
 # user_metrics_users_blocklist = []
+
+# Latencies Allowlist and Blocklist to control for which histogram statistics should be collected. 
+# we configure histogram-names, Note globbing patterns are not supported for this configuration. 
+# latencies_metrics_allowlist = []
+# latencies_metrics_blocklist = []
+
+
