--- a/tests/ns_allow_block_list_ape.toml
+++ b/tests/ns_allow_block_list_ape.toml
@@ -27,7 +27,7 @@ root_ca = ""
 key_file_passphrase = ""
 
 # labels to add to the prometheus metrics for e.g. labels={zone="asia-south1-a", platform="google compute engine"}
-labels = {}
+labels = {a="hello"}
 
 bind = ":9145"
 
