OM80 - server agnostic exporter (#83)
OM80 - server agnostic exporter

Reads Gauge stats from file
added test-cases for the Gauge configs
updated README.md with the gauge-list command line argument in the "run exporter" step

--- a/tests/ns_blocklist_ape.toml
+++ b/tests/ns_blocklist_ape.toml
@@ -119,8 +119,8 @@ latency_buckets_count = 0
 # for example "batch_index_*_buffers"
 
 # Namespace metrics allowlist, to control which Namespace metrics should be collected.
-#namespace_metrics_allowlist = ["master*object*"]
-# namespace_metrics_blocklist = []
+# namespace_metrics_allowlist = []
+namespace_metrics_blocklist = ["master_object*"]
 
 # set_metrics_allowlist = []
 # set_metrics_blocklist = []
