OM72 - FIPS Build Automation
Github Action to generate a FIPS compliant Aerospike Prometheus Exporter

updated Action trigger condition from Manual & Tag to PUSH to OM72 branch

--- a/.github/workflows/fips_release_artifact.yml
+++ b/.github/workflows/fips_release_artifact.yml
@@ -2,7 +2,8 @@ name: manual_continuous_deploy
 
 on:
  push:
-   tags: FR*
+  branches:
+    - OM72
 #    workflow_dispatch:
 #      inputs:
 #         release_tag_info:
